# cryptography-technical-test

./: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
docs/: fallback.md  initialization.md  re-keying.md  secure-local.md
src/: CMakeLists.txt  client.cpp  headsock.h  server.cpp
